# testing_MongoDB

./: .gitignore  README.md  authentication.py  main.py  pyproject.toml
database/: __init__.py  connect.py  models.py  seed.py
drafts/: app.py
example_rabbitmq/: config.ini  connect.py  consumer.py  consumer_email.py  consumer_sms.py  models.py  producer.py  seed.py
pymongo_example/: app.py  test_commection.py
