[tool.poetry]
name = "testing-mongodb"
version = "0.1.0"
description = ""
authors = ["Denys Tantsiura <ghost0002501@gmail.com>"]
readme = "README.md"
packages = [{include = "testing_mongodb"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
mongoengine = "^0.27.0"
redis = "^4.5.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
black = {extras = ["d"], version = "^23.1.0"}
flake8 = "^6.0.0"

[tool.black]
line-length = 119
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
